--- a/src/main/resources/templates/portal_view.html
+++ b/src/main/resources/templates/portal_view.html
@@ -21,7 +21,9 @@
                             </h3>
                         </label>
 
-                        <input class="btn btn-lg btn-primary btn-block text-uppercase custom-btn" type="submit" value="Logout"/>
+                        <input class="btn-lg btn-primary btn-block
+                                      text-uppercase custom-btn btn"
+                               type="submit" value="Logout"/>
                     </form>
                 </div>
 
