--- a/src/main/resources/templates/invoice_list_view.html
+++ b/src/main/resources/templates/invoice_list_view.html
@@ -9,83 +9,119 @@
 <div th:replace="fragments/header :: header"></div>
 
 <main class="container" role="main">
-    <div class="starter-template">
-        <div class="row mx-auto custom-form">
-            <div class="col mx-auto custom-bg">
+<div class="starter-template">
+<div class="row mx-auto custom-form">
+    <div class="col mx-auto custom-bg">
 
-                <div id=missingTimeSheetMessage th:if="${Reviews.isEmpty()}">
-                    <div>No matching Invoices</div>
-                </div>
+    <div id=missingTimeSheetMessage th:if="${Reviews.isEmpty()}">
+        <div>No matching Invoices</div>
+    </div>
 
 
-                <div class="row mt-4 custom-label">
-                    <h4 th:text="'Invoices'"></h4>
-                </div>
+    <div class="row mt-4 custom-label">
+        <h4 th:text="'Invoices'"></h4>
+    </div>
 
-                <div class="custom-form" th:if="${!Reviews.isEmpty()}">
-                    <div class="mx-3 custom-bg scrolling-wrapper">
-                        <table class="table table-light" id="reviews">
-                            <thead>
-                            <tr>
-                                <th scope="col">
-                                    <label for="nameSearch">Name</label>
-                                    <input class="small-input searcher" type="text" id="nameSearch" onkeyup="filterResults()" placeholder="Name">
-                                </th>
-                                <th scope="col">
-                                    <label for="agencySearch">Agency</label>
-                                    <input class="small-input searcher" type="text" id="agencySearch" onkeyup="filterResults()" placeholder="Agency">
-                                </th>
-                                <th scope="col">
-                                    <label for="agencyEmailSearch">Agency Email</label>
-                                    <input class="small-input searcher" type="text" id="agencyEmailSearch" onkeyup="filterResults()" placeholder="agency@email.com">
-                                </th>
-                                <th scope="col">
-                                    <label for="daysWorkedSearch">Days Worked</label>
-                                    <input class="tiny-input searcher" type="text" pattern="/d*" id="daysWorkedSearch" onkeyup="filterResults()" placeholder="">
-                                </th>
-                                <th scope="col">
-                                    <label for="overTimeSearch">Over Time</label>
-                                    <input class="tiny-input searcher" type="text" pattern="/d*" id="overTimeSearch" onkeyup="filterResults()" placeholder="">
-                                </th>
-                                <th scope="col">
-                                    <label for="weekFinishedSearch">Week End Date</label>
-                                    <input class="date-input searcher" type="text" id="weekFinishedSearch" onkeyup="filterResults()" placeholder="YYYY-MM-DD">
-                                </th>
-                                <th scope="col">
-                                    <label for="reviewSearch">Reviewed</label>
-                                    <input class="tiny-input searcher" type="text" id="reviewSearch" onkeyup="filterResults()" placeholder="Approved"/>
-                                </th>
-                                <th scope="col">
-                                    <label for="paidSearch">Paid</label>
-                                    <input class="tiny-input searcher" type="text" id="paidSearch" onkeyup="filterResults()" placeholder="true"/>
-                                </th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="ReviewItem: ${Reviews}" th:id="'reviewItem' + ${ReviewItem.id}" class="notSaved">
-                                <td><span th:text="${ReviewItem.timeSheet.contractor.user.firstname}
-                                            + ' ' + ${ReviewItem.timeSheet.contractor.user.surname}"></span></td>
-                                <td><span th:text="${ReviewItem.timeSheet.contractor.agency.name}"></span></td>
-                                <td><span th:text="${ReviewItem.timeSheet.contractor.agency.agency_email}"></span></td>
-                                <td><span th:text="${ReviewItem.timeSheet.daysWorked}"></span></td>
-                                <td><span th:text="${ReviewItem.timeSheet.overtime}"></span></td>
-                                <td><span th:text="${ReviewItem.timeSheet.week_finish}"></span></td>
-                                <td><span th:text="${ReviewItem.approved}"></span></td>
-                                <td><span th:text="${ReviewItem.paid}"></span></td>
-                                <td>
-                                    <button class="btn btn-success" id="approve"
-                                            th:onclick="|sendApproval(${ReviewItem.id})|">
-                                        Confirm Invoice
-                                    </button>
-                                </td>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
+    <div class="custom-form" th:if="${!Reviews.isEmpty()}">
+        <div class="mx-3 custom-bg scrolling-wrapper">
+        <table class="table table-light" id="reviews">
+            <thead>
+                <tr>
+                <th scope="col">
+                    <label for="nameSearch">Name</label>
+                    <input class="small-input searcher"
+                           type="text" id="nameSearch"
+                           onkeyup="filterResults()"
+                           placeholder="Name">
+                </th>
 
+                <th scope="col">
+                    <label for="agencySearch">Agency</label>
+                    <input class="small-input searcher"
+                           type="text" id="agencySearch"
+                           onkeyup="filterResults()"
+                           placeholder="Agency">
+                </th>
+
+                <th scope="col">
+                    <label for="agencyEmailSearch">Agency Email</label>
+                    <input class="small-input searcher"
+                           type="text" id="agencyEmailSearch"
+                           onkeyup="filterResults()"
+                           placeholder="agency@email.com">
+                </th>
+
+                <th scope="col">
+                    <label for="daysWorkedSearch">Days Worked</label>
+                    <input class="tiny-input searcher"
+                           type="text" pattern="/d*"
+                           id="daysWorkedSearch"
+                           onkeyup="filterResults()"
+                           placeholder="">
+                </th>
+
+                <th scope="col">
+                    <label for="overTimeSearch">Over Time</label>
+                    <input class="tiny-input searcher"
+                           type="text" pattern="/d*"
+                           id="overTimeSearch"
+                           onkeyup="filterResults()"
+                           placeholder="">
+                </th>
+
+                <th scope="col">
+                    <label for="weekFinishedSearch">Week End Date</label>
+                    <input class="date-input searcher"
+                           type="text" id="weekFinishedSearch"
+                           onkeyup="filterResults()"
+                           placeholder="YYYY-MM-DD">
+                </th>
+
+                <th scope="col">
+                    <label for="reviewSearch">Reviewed</label>
+                    <input class="tiny-input searcher"
+                           type="text" id="reviewSearch"
+                           onkeyup="filterResults()"
+                           placeholder="Approved"/>
+                </th>
+
+                <th scope="col">
+                    <label for="paidSearch">Paid</label>
+                    <input class="tiny-input searcher"
+                           type="text" id="paidSearch"
+                           onkeyup="filterResults()"
+                           placeholder="true"/>
+                </th>
+
+                </tr>
+            </thead>
+            <tbody>
+            <tr th:each="ReviewItem: ${Reviews}" class="notSaved"
+                th:id="'reviewItem' + ${ReviewItem.id}">
+
+                <td><span th:text="${ReviewItem.timeSheet.contractor.user.firstname}
+                            + ' ' + ${ReviewItem.timeSheet.contractor.user.surname}"></span></td>
+                <td><span th:text="${ReviewItem.timeSheet.contractor.agency.name}"></span></td>
+                <td><span th:text="${ReviewItem.timeSheet.contractor.agency.agency_email}"></span></td>
+                <td><span th:text="${ReviewItem.timeSheet.daysWorked}"></span></td>
+                <td><span th:text="${ReviewItem.timeSheet.overtime}"></span></td>
+                <td><span th:text="${ReviewItem.timeSheet.week_finish}"></span></td>
+                <td><span th:text="${ReviewItem.approved}"></span></td>
+                <td><span th:text="${ReviewItem.paid}"></span></td>
+                <td>
+                    <button class="btn btn-success" id="approve"
+                            th:onclick="|sendApproval(${ReviewItem.id})|">
+                        Confirm Invoice
+                    </button>
+                </td>
+            </tbody>
+        </table>
         </div>
     </div>
+    </div>
+
+</div>
+</div>
 </main>
 <script>
     function sendApproval(id) {
@@ -94,6 +130,7 @@
         row.classList.remove("notSaved");
         row.style.display = "none";
     }
+
     function filterResults() {
 
         let table = document.getElementById("reviews");
