--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -21,7 +21,9 @@
 
                 <form method="post" th:action="@{/logout}">
                     <div class="row mt-4">
-                        <input class="btn btn-lg btn-primary btn-block text-uppercase" type="submit" value="Sign Out"/>
+                        <input class="btn btn-lg btn-primary
+                                      btn-block text-uppercase"
+                               type="submit" value="Sign Out"/>
                     </div>
                 </form>
 
