--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -90,6 +90,7 @@
                 <div sec:authorize="hasAuthority('ROLE_MANAGER')">
                     <a class="btn btn-light" href="/">Home</a>
                     <a class="btn btn-light" th:href="@{/Reviews}">View Time Sheets</a>
+                    <a class="btn btn-light" th:href="@{/Contractors}">View Contractors</a>
                 </div>
 
                 <!--Contractor Menu-->
