--- a/src/main/resources/templates/admin_select_contractors_list.html
+++ b/src/main/resources/templates/admin_select_contractors_list.html
@@ -15,8 +15,10 @@
 
     <div class="col mx-auto custom-bg">
 
-        <div id=missingContractorsMessage th:if="${Contractors.isEmpty()}">
-            <div>No matching Contractors</div>
+        <div id=missingContractorsMessage
+             th:if="${Contractors.isEmpty()}"
+             class="row mt-4 custom-label">
+            <h4>No matching Contractors</h4>
         </div>
 
 
@@ -29,38 +31,39 @@
 
         <div class="mx-3 custom-bg scrolling-wrapper">
             <form name="selectForm" th:id="selectForm">
-                <table class="table table-light" id="contractorSelect">
+                <table class="table table-light" id="contractorSelect"
+                       style="table-layout: fixed; width: 99%">
 
                 <thead>
                 <tr>
-                    <th scope="col">
-                        <label for="usernameSearch">Name</label>
+                    <th scope="col" class="shorter-header">
+                        <label for="usernameSearch">Username</label>
                         <input class="small-input searcher"
                                type="text" id="usernameSearch"
                                onkeyup="filterResults()"
                                placeholder="Username">
                     </th>
-                    <th scope="col">
+                    <th scope="col" class="shorter-header">
                         <label for="nameSearch">Name</label>
                         <input class="small-input searcher"
                                type="text" id="nameSearch"
                                onkeyup="filterResults()"
                                placeholder="Full name">
                     </th>
-                    <th scope="col">
+                    <th scope="col" class="shorter-header">
                         <label for="agencyNameSearch">Agency</label>
                         <input class="small-input searcher"
                                type="text" id="agencyNameSearch"
                                onkeyup="filterResults()"
                                placeholder="Agency">
                     </th>
-                    <th scope="col">
+                    <th scope="col" class="shorter-header">
                         <label for="ContractorEmailSearch">Contractor Email</label>
-                        <input class="date-input searcher"
+                        <input class="small-input searcher"
                                type="text" id="ContractorEmailSearch"
                                onkeyup="filterResults()" placeholder="Email">
                     </th>
-                    <th scope="col">
+                    <th scope="col" class="shorter-header">
                         <label for="currentManagerSearch">Manager</label>
                         <input class="small-input searcher"
                                type="text" id="currentManagerSearch"
@@ -70,7 +73,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="AContractor: ${Contractors}">
+                <tr th:each="AContractor: ${Contractors}" class="wrap">
                     <td><span th:text="${AContractor.getUser().getUsername()}"></span></td>
                     <td><span th:text="${AContractor.getUser().getFirstname()} + ' '
                                       +${AContractor.getUser().getSurname()}"></span></td>
