added password retrieval

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -38,6 +38,7 @@
                     <div class="row mt-4">
                         <input class="btn btn-lg btn-primary btn-block text-uppercase custom-btn"
                                type="submit" value="Sign In"/>
+                        <a class="btn btn-lg btn-primary btn-block text-uppercase custom-btn" th:href="@{/passwordReset}">Forgot Password</a>
 
                     </div>
 
