added mock user with gmail, changed names

--- a/src/main/resources/templates/passwordReset.html
+++ b/src/main/resources/templates/passwordReset.html
@@ -12,7 +12,7 @@
         <div class="row mx-auto custom-form">
             <div class="col mx-auto custom-bg">
                 <div id = forgotPasswordDetails>
-                    <form action="#" method="post" th:action="@{/passwordReset}" th:object="${passwordKey}">
+                    <form action="#" method="post" th:action="@{/passwordRetrieve}" th:object="${passwordKey}">
 
                         <div class="custom-label">
                             <h3>Please Enter The Details To Retrieve Password</h3>
@@ -38,7 +38,7 @@
                             <input th:name="${_csrf.parameterName}" th:value="${_csrf.token}" type="hidden"/>
 
                             <input class="btn btn-lg btn-primary btn-block custom-btn" id="submit" type="submit"
-                                   value="Submit Email For Password Reset"/>
+                                   value="Submit To Retrieve Password"/>
                         </div>
 
                     </form>
